--- a/character.html
+++ b/character.html
@@ -6,28 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/character.css">
+    <link rel="stylesheet" href="assets/css/sp-character.css" defer>
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="icon" href="assets/images/favicon.png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-visible/1.2.0/jquery.visible.min.js"></script>
     <script src="assets/js/character.js" defer></script>
-    <title>キャラクター紹介</title>
+    <script src="assets/js/chara-switchDevice.js"></script>
+    <title>NIR=A | キャラクター紹介</title>
 </head>
 
 <body>
 <a id="backHome" href="home.html">＜ ホームに戻る</a>
     <div id="hero">
-        
     </div>
     
     <div id="heroIntro">
       <div class="blur">
         <iframe class="model" src="https://meganenomegane1224.github.io/webGL_charactor/" loading = "lazy" frameborder="0" scrolling="no"></iframe>
         <div class="wipePos">
-          <img class="wipe" src="assets/images/herowipe.png" alt="">
+          <a href="https://meganenomegane1224.github.io/webGL_charactor/"><img class="wipe" src="assets/images/herowipe-low.png" alt=""></a>
         </div>
-          <li class="firstItem">身長: 175</li>
+          <li class="firstItem">身長: 175cm</li>
           <li>年齢: 17</li>
           <li>モデル制作者: 中島弘喜</li>
           <li>キャラデザ: 益井</li>
@@ -70,13 +70,13 @@
       <div class="blur">
           <img class="model" src="assets/images/heroine.png" alt="">
         <div class="wipePos">
-          <img class="wipe" src="assets/images/heroinewipe.png" alt="">
+          <img class="wipe" src="assets/images/heroinewipe-low.png" alt="">
         </div>
-          <li class="firstItem">身長: 175</li>
+          <li class="firstItem">身長: 160cm</li>
           <li>年齢: 17</li>
           <li>モデル制作者: 中島弘喜</li>
           <li>キャラデザ: novelAI</li>
-          <li>異能: </li>
+          <li>異能: ??? </li>
         <div class="loop">
           <div class="loop1">HEROINE</div>
           <div class="loop1">HEROINE</div>
@@ -115,9 +115,9 @@
       <div class="blur">
         <iframe class="model" src="https://meganenomegane1224.github.io/webGL_BOSScharactor/" loading = "lazy"  frameborder="0" scrolling="no"></iframe>
         <div class="wipePos">
-          <img class="wipe" src="assets/images/bosswipe.png" alt="">
+          <a href="https://meganenomegane1224.github.io/webGL_BOSScharactor/"><img class="wipe" src="assets/images/bosswipe-low.png" alt=""></a>
         </div>
-          <li class="firstItem">身長: </li>
+          <li class="firstItem">身長: 120cm</li>
           <li>年齢: ???</li>
           <li>モデル制作者: megane</li>
           <li>キャラデザ: 韮山高校美術部</li>
