--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/question.css">
   <link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="icon" href="assets/images/favicon.png">
   <script type="text/javascript">var submitted = false;</script>
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) 
 {window.location='thanks.html'}"></iframe>
-  <title>お問い合わせフォーム</title>
+  <title>NIR=A | お問い合わせフォーム</title>
 </head>
 
 <body>
   <header>
     <div class="headerInner">
-      <h1 class="logo">お問い合わせフォーム</h1>
+      <h1 class="logo">お問い合わせフォーム | 不具合報告</h1>
     </div>
   </header>
   <main>
