--- a/news.html
+++ b/news.html
@@ -6,26 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/newspage.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <title>News</title>
+    <link rel="icon" href="assets/images/favicon.png">
+    <title>NIR=A | News</title>
 </head>
 <body>
   <a id="backHome" href="home.html">＜ ホームに戻る</a>
     <div class="blur">
         <img id="newsTitle" src="assets/images/news.png" alt="題名">
         <div class="newsList">
+          <a href="assets/news/news-4.html"><img src="assets/samnail/news-4.png" alt="文化祭について"></a>
+          <a href="assets/news/news-3.html"><img src="assets/samnail/news-3.png" alt="キャラクター紹介ページについて"></a>
+          <!-- <a href="assets/news/news-2.html"><img src="assets/samnail/news-2.png" alt="プレイ映像"></a> -->
           <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-          <a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt="リリース予定"></a>
-        </div>
     </div>
     
     <footer>
