--- a/staff.html
+++ b/staff.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/staff.css">
-    <title>スタッフ紹介</title>
+    <link rel="icon" href="assets/images/favicon.png">
+    <title>NIR=A | スタッフ紹介</title>
 </head>
 <body>
     <a href="home.html" id="backHome">＜ ホームに戻る</a>
     <main>
     <h1>スタッフ紹介</h1>
+    <h3>※()内はイニシャルです。</h3>
     <h2 class="role">プロジェクトマネージャー</h2>
         <h3 class="manager">ホブゴブリン(M)</h3>
     <h2 class="role">プログラミング</h2>
@@ -41,15 +43,19 @@
             <li>ホブゴブリン(M)</li>
             <li>michelle(T)</li>
             <li>韮山高校美術部</li>
+            <li>吉田</li>
             <li>益井</li>
             <li>ひろ(S)</li>
-            <li>あか(s)</li>
+            <li>あか(I)</li>
+            <li>大沼</li>
+            <li>中野</li>
+            <li>古屋</li>
         </ul>
     <h2 class="role">エフェクト</h2>
         <h3 class="manager">こた(S)</h3>
     <h2 class="role">モーション</h2>
+        <h3 class="manager">ホブゴブリン(M)</h3>
         <ul>
-            <li>ホブゴブリン(M)</li>
             <li>megane(U)</li>
         </ul>
     <h2 class="role">ステージ・グラフィックス</h2>
