--- a/thanks.html
+++ b/thanks.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/question.css">
+  <link rel="icon" href="assets/images/favicon.png">
   <title>ご質問ありがとうございます。</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
 <main>
   <div class="text-center">
     <h1>お問い合わせ完了</h1>
-    <p>改善に努めて参ります。</p>
+    <p>ご質問された内容は後日「Q&Aページ」を作成し、そちらでお答えいたします</p>
     <a href="home.html">ホームに戻る</a>
   </div>
 </main>
